# bank/${project..directory}/generated-sources/generated-sources/com/bank/model/CustomerInfo.java
@@ -1,296 +1,0 @@
-package com.bank.model;
-
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import io.swagger.v3.oas.annotations.media.Schema;
-import java.math.BigDecimal;
-import org.springframework.validation.annotation.Validated;
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-
-/**
- * CustomerInfo
- */
-@Validated
-
-
-public class CustomerInfo   {
-  @JsonProperty("firstName")
-  private String firstName = null;
-
-  @JsonProperty("lastName")
-  private String lastName = null;
-
-  @JsonProperty("balance")
-  private Float balance = null;
-
-  @JsonProperty("email")
-  private String email = null;
-
-  @JsonProperty("dob")
-  private String dob = null;
-
-  @JsonProperty("street")
-  private String street = null;
-
-  @JsonProperty("city")
-  private String city = null;
-
-  @JsonProperty("state")
-  private String state = null;
-
-  @JsonProperty("country")
-  private String country = null;
-
-  @JsonProperty("postalCode")
-  private BigDecimal postalCode = null;
-
-  public CustomerInfo firstName(String firstName) {
-    this.firstName = firstName;
-    return this;
-  }
-
-  /**
-   * Get firstName
-   * @return firstName
-   **/
-  @Schema(example = "firstName", description = "")
-  
-    public String getFirstName() {
-    return firstName;
-  }
-
-  public void setFirstName(String firstName) {
-    this.firstName = firstName;
-  }
-
-  public CustomerInfo lastName(String lastName) {
-    this.lastName = lastName;
-    return this;
-  }
-
-  /**
-   * Get lastName
-   * @return lastName
-   **/
-  @Schema(example = "lastName", description = "")
-  
-    public String getLastName() {
-    return lastName;
-  }
-
-  public void setLastName(String lastName) {
-    this.lastName = lastName;
-  }
-
-  public CustomerInfo balance(Float balance) {
-    this.balance = balance;
-    return this;
-  }
-
-  /**
-   * Available balance
-   * @return balance
-   **/
-  @Schema(description = "Available balance")
-  
-    public Float getBalance() {
-    return balance;
-  }
-
-  public void setBalance(Float balance) {
-    this.balance = balance;
-  }
-
-  public CustomerInfo email(String email) {
-    this.email = email;
-    return this;
-  }
-
-  /**
-   * Get email
-   * @return email
-   **/
-  @Schema(example = "abchfg@efg.com", description = "")
-  
-    public String getEmail() {
-    return email;
-  }
-
-  public void setEmail(String email) {
-    this.email = email;
-  }
-
-  public CustomerInfo dob(String dob) {
-    this.dob = dob;
-    return this;
-  }
-
-  /**
-   * Get dob
-   * @return dob
-   **/
-  @Schema(example = "12.23.2000", description = "")
-  
-    public String getDob() {
-    return dob;
-  }
-
-  public void setDob(String dob) {
-    this.dob = dob;
-  }
-
-  public CustomerInfo street(String street) {
-    this.street = street;
-    return this;
-  }
-
-  /**
-   * Get street
-   * @return street
-   **/
-  @Schema(example = "street name", description = "")
-  
-    public String getStreet() {
-    return street;
-  }
-
-  public void setStreet(String street) {
-    this.street = street;
-  }
-
-  public CustomerInfo city(String city) {
-    this.city = city;
-    return this;
-  }
-
-  /**
-   * Get city
-   * @return city
-   **/
-  @Schema(example = "city name", description = "")
-  
-    public String getCity() {
-    return city;
-  }
-
-  public void setCity(String city) {
-    this.city = city;
-  }
-
-  public CustomerInfo state(String state) {
-    this.state = state;
-    return this;
-  }
-
-  /**
-   * Get state
-   * @return state
-   **/
-  @Schema(example = "state name", description = "")
-  
-    public String getState() {
-    return state;
-  }
-
-  public void setState(String state) {
-    this.state = state;
-  }
-
-  public CustomerInfo country(String country) {
-    this.country = country;
-    return this;
-  }
-
-  /**
-   * Get country
-   * @return country
-   **/
-  @Schema(example = "country name", description = "")
-  
-    public String getCountry() {
-    return country;
-  }
-
-  public void setCountry(String country) {
-    this.country = country;
-  }
-
-  public CustomerInfo postalCode(BigDecimal postalCode) {
-    this.postalCode = postalCode;
-    return this;
-  }
-
-  /**
-   * Get postalCode
-   * @return postalCode
-   **/
-  @Schema(example = "501510", description = "")
-  
-    @Valid
-    public BigDecimal getPostalCode() {
-    return postalCode;
-  }
-
-  public void setPostalCode(BigDecimal postalCode) {
-    this.postalCode = postalCode;
-  }
-
-
-  @Override
-  public boolean equals(java.lang.Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    CustomerInfo customerInfo = (CustomerInfo) o;
-    return Objects.equals(this.firstName, customerInfo.firstName) &&
-        Objects.equals(this.lastName, customerInfo.lastName) &&
-        Objects.equals(this.balance, customerInfo.balance) &&
-        Objects.equals(this.email, customerInfo.email) &&
-        Objects.equals(this.dob, customerInfo.dob) &&
-        Objects.equals(this.street, customerInfo.street) &&
-        Objects.equals(this.city, customerInfo.city) &&
-        Objects.equals(this.state, customerInfo.state) &&
-        Objects.equals(this.country, customerInfo.country) &&
-        Objects.equals(this.postalCode, customerInfo.postalCode);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(firstName, lastName, balance, email, dob, street, city, state, country, postalCode);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class CustomerInfo {\n");
-    
-    sb.append("    firstName: ").append(toIndentedString(firstName)).append("\n");
-    sb.append("    lastName: ").append(toIndentedString(lastName)).append("\n");
-    sb.append("    balance: ").append(toIndentedString(balance)).append("\n");
-    sb.append("    email: ").append(toIndentedString(email)).append("\n");
-    sb.append("    dob: ").append(toIndentedString(dob)).append("\n");
-    sb.append("    street: ").append(toIndentedString(street)).append("\n");
-    sb.append("    city: ").append(toIndentedString(city)).append("\n");
-    sb.append("    state: ").append(toIndentedString(state)).append("\n");
-    sb.append("    country: ").append(toIndentedString(country)).append("\n");
-    sb.append("    postalCode: ").append(toIndentedString(postalCode)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(java.lang.Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-}
